Version: 1.1.0
Date: ????
  Features:
    - Add "Initial preset" mod setting. You can paste an exported preset string that Milestones will load at the beginning of every new game. Useful for speedrunning practice.
    - Add "Kill" milestone type. Used to track biter kills (or any other kills, such as killing yourself with locomotives :) )
  Changes:
    - Add kill milestones to existing presets
  Bugfixes:
    - Fix crash when GUI was opened after being closed in some way that didn't trigger the on_gui_closed event
    - Fix crash when using the import feature, introduced in 1.0.10
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 2021-11-20
  Changes:
    - Add missing holmium ingot to SE+K2 preset
  Bugfixes:
    - Import-export window now gets a scrollbar instead of expanding beyond the screen for large milestone lists
    - Fix issues with multiple forces, where new forces could have completion times from existing forces, and players switching forces could erase completion times. This fixes issues with Editor Extensions's testing lab mode.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021-10-17
  Bugfixes:
    - Fix issue where the completion time for technology milestones was not being saved properly. If you had completed technology milestones, updating to this version will allow you to enter those lost times yourself.
    - Fix crash when going to settings after removing the mod that was currently selected as preset.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021-10-03
  Bugfixes:
    - Fix crash when right-clicking an item selector in the settings menu
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021-08-29
  Features: